logs/dag_id=weather_data_pipeline/run_id=manual__2024-06-28T102247.454922+0000/task_id=predict_weather/attempt=1.log
[2024-06-28T10:23:00.572+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-28T10:23:00.592+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:22:47.454922+00:00 [queued]>
[2024-06-28T10:23:00.602+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:22:47.454922+00:00 [queued]>
[2024-06-28T10:23:00.602+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-06-28T10:23:00.616+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): predict_weather> on 2024-06-28 10:22:47.454922+00:00
[2024-06-28T10:23:00.625+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=88) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-28T10:23:00.626+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'weather_data_pipeline', 'predict_weather', 'manual__2024-06-28T10:22:47.454922+00:00', '--job-id', '96', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag.py', '--cfg-path', '/tmp/tmpcobek0zo']
[2024-06-28T10:23:00.627+0000] {standard_task_runner.py:63} INFO - Started process 102 to run task
[2024-06-28T10:23:00.627+0000] {standard_task_runner.py:91} INFO - Job 96: Subtask predict_weather
[2024-06-28T10:23:00.669+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:22:47.454922+00:00 [running]> on host 3691a34eba99
[2024-06-28T10:23:00.726+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'predict_weather', field 'op_kwargs'. Template: {'file_path': "{{ task_instance.xcom_pull(task_ids='fetch_weather_data'}}", 'model_path': './temperature_prediction_model.pkl'}
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 181, in render_template
    return {k: self.render_template(v, context, jinja_env, oids) for k, v in value.items()}
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
[2024-06-28T10:23:00.728+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1337, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 181, in render_template
    return {k: self.render_template(v, context, jinja_env, oids) for k, v in value.items()}
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
[2024-06-28T10:23:00.737+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=weather_data_pipeline, task_id=predict_weather, run_id=manual__2024-06-28T10:22:47.454922+00:00, execution_date=20240628T102247, start_date=20240628T102300, end_date=20240628T102300
[2024-06-28T10:23:00.749+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 96 for task predict_weather (unexpected '}', expected ')'; 102)
[2024-06-28T10:23:00.761+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-28T10:23:00.776+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-28T10:23:00.780+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
